make long lines break in the micronauts post and fix weird pre:hover

--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -404,10 +404,11 @@ pre {
 	-webkit-box-shadow: 1px 1px 6px #ccc;
 	-moz-box-shadow: 1px 1px 6px #ccc;
 }
-pre:hover {
+/*pre:hover {
 	border-right: none;
 	overflow: auto;
 }
+*/
 code {
 	font-size: 1em;
 	background-color: #f7f7ff;
